backend/agent-runtime/crates/winkgo-agent-providers/src/snapshots/winkgo_agent_providers__openai__tests__openai_custom_max_tokens_field.snap
---
source: crates/winkgo-agent-providers/src/openai.rs
expression: provider.build_request_body(&request)
---
{
  "max_completion_tokens": 8192,
  "messages": [
    {
      "content": "You are a test assistant.",
      "role": "system"
    },
    {
      "content": "hi",
      "role": "user"
    }
  ],
  "model": "test-model",
  "stream": true,
  "stream_options": {
    "include_usage": true
  }
}
